authentication sign in part

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -10,3 +10,6 @@
 
 "onboard3Title" = "Have a nice body";
 "onboard3Slogan" = "Exercise is king. Nutrition is queen. Put them together and you’ve got a kingdom.";
+
+"singin" = "Sign in";
+"welcomeback" = "Welcome back!";
